--- a/javagame.html
+++ b/javagame.html
@@ -2,7 +2,7 @@
 <html> 
 <head> 
     <meta charset="utf-8"> 
-    <link rel="stylesheet" type="text/css" href="style.css"
+    <link rel="stylesheet" type="text/css" href="assets/img/style.css"
      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
@@ -49,7 +49,10 @@
           <div class="img">
             <img src="PrincessCat.jpg" alt="Spoiled PrincessCat" width="500" height="333">
     
-        </p>
+        </p> 
+
+        var wins = 0;
+
         <p>Wins: <span id="wins">0</span></p>
         <p>Losses <span id="Losses">0</span></p>
   
