uploading into uncorrupt file

--- a/javagame.html
+++ b/javagame.html
@@ -47,7 +47,7 @@
           <h1>Java Game</h1>
     
           <div class="img">
-            <img src="PrincessCat.jpg" alt="Spoiled PrincessCat" width="500" height="333">
+            <img src="assets/img/PrincessCat.jpg" alt="Spoiled PrincessCat" width="500" height="333">
     
         </p> 
 
